# Stones

./: .coveragerc  .flake8  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  requirements-full.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python.yml
stones/: __init__.py  __version__.py  base.py  dbm.py  encoders.py  exceptions.py  leveldb.py  lmdb.py  memory.py  redis.py  serialize.py  ultra.py  util.py
test/: common.py  test_stor_lmdb.py  test_stor_lvl.py
tests/: common.py  test_deep.py  test_encoders.py  test_stone.py  test_stor_dbm.py  test_stor_lmdb.py  test_stor_lvl.py  test_stor_memo.py  test_stor_redis.py  test_store.py  test_ultra.py  test_util.py
