
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stones"
version = "0.3.0"
description = "Library for Persistent key-value containers, compatible with Python dict"
readme = "README.md"
authors = [{name = "Cristi Constantin"}]
license = {file = "LICENSE"}

classifiers=[
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Database',
    'Topic :: Software Development',
]

requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/croqaz/Stones"
Repository = "https://github.com/croqaz/Stones"

[project.optional-dependencies]
extra = [
  "lmdb ~= 1.4",
  "ujson ~= 5.8",
  "cbor2 ~= 5.4",
  "msgpack ~= 1.0"
]
test = [
  "pytest ~= 7.4",
  "pytest-cov ~= 4.1",
  "codecov ~= 2.1",
  "Flake8-pyproject ~= 1.2"
]

[tool.setuptools]
package-dir = {"" = "stones"}

[tool.flake8]
max-line-length = 120
per-file-ignores = [
    "__init__.py:F4",
]
extend-ignore = [
    "E121",  # continuation line under-indented for hanging indent
    "E128",  # continuation line under-indented for visual indent
]
extend-exclude = [
    "*.egg-info",
    "dist",
]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "__version__",
    "def __repr__",
    "def __str__",
    "if TYPE_CHECKING:",
    "if __name__ == __main__:",
    "pragma: no cover",
    "raise ModuleNotFoundError.+",
    "raise NotImplementedError.+",
    "warnings\\.warn.+",
]
