[metadata]
description-file = README.md
license_file = LICENSE

[flake8]
max-line-length = 120
max-complexity = 15
ignore =
  # E121 continuation line under-indented for hanging indent
  E121,
  # E128 continuation line under-indented for visual indent
  E128,
  # E265 block comment should start with '# '
  E265,
